Create and custom letters in HomePage

--- a/src/styles/custom/_colors.scss
+++ b/src/styles/custom/_colors.scss
@@ -5,3 +5,8 @@ $color-gray-lightest: #EDEFEE;
 $color-gray-lighter: #BDBBBB;
 $color-gray-light: #9D9B9B;
 $color-gray-dark: #3B393D;
+
+$color-home: mistyrose;
+$color-about: #CD7640;
+$color-skills: #8dd6cd;
+$color-skills: #73bfff;
