--- a/src/styles/custom/components/_navbar.scss
+++ b/src/styles/custom/components/_navbar.scss
@@ -1,21 +1,36 @@
 
-.container-header {
-    background-color: #f2f2f2;
-  }
-  
-  .nav-pills .nav-link.active {
-    background-color:#908686 !important; ;
-  }
+@import url('https://fonts.googleapis.com/css?family=Abel|Encode+Sans+Condensed|Exo|Exo+2|Kodchasan');
+
+body {
+  background-color: $color-home;
+  font-family: 'Kodchasan', sans-serif;
+}
+
+.container-nav {
+  margin: 2px;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  float: right;
+  margin-right: 5%;
+}
   
   .menu-nav__header {
+
+    color: gray;
     ul {
       margin: 0;
       list-style: none;
       padding: 0;
       display: flex;
+      
     }
     li {
       display: block;
-      padding: 10px 5px
+      padding: 10px 5px;
+      word-spacing: 12px;
+      letter-spacing: 3px;
+      font-weight: bolder;
+      font-size: 15px;
     }
   }
